<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SecondHandMarket</string>
    <string name="next_step">下一步</string>
    <string name="title_app">校园二手市场</string>
    <string name="title_classify">分类</string>
    <string name="title_center">我的</string>
    <string name="title_release">发布</string>
    <string name="title_message">消息</string>
    <string name="title_home">首页</string>
    <string name="title_bar_search">搜索</string>
    <string name="title_chose_school">选择学校</string>
    <string name="classify_title">分类浏览</string>
    <string name="item_classify_description">分类栏</string>
    <string name="message_title">消息</string>
    <string name="center_title">我的</string>
    <string name="center_user_name">用户名:</string>
    <string name="center_credit">信用等级:</string>
    <string name="center_sell">在售</string>
    <string name="center_selled">已售出</string>
    <string name="center_buy">已买到</string>
    <string name="center_favorites">收藏夹</string>
    <string name="settings_title">设置</string>
    <string name="settings_about">关于</string>
    <string name="settings_feedback">意见反馈</string>
    <string name="settings_help">帮助</string>
    <string name="settings_clear">清除缓存</string>
    <string name="settings_message_remind">消息提醒设置</string>
    <string name="settings_sign_out">注销</string>
    <string name="settings_sign_in">登录</string>
    <string name="remind_goods_business">物品交易通知</string>
    <string name="remind_message">消息通知</string>
    <string name="remind_hot_goods">热门物品推荐</string>
    <string name="remind_custom_lable">自订关键词通知</string>
    <string name="remind_custom_lable_hint">请输入关键词</string>
    <string name="remind_custom_lable_ok">确定</string>
    <string name="about_check_update">检查更新</string>
    <string name="about_contact_us">联系我们</string>
    <string name="release_title">发布物品</string>
    <string name="release_step_one">发布宝贝第一步:</string>
    <string name="release_insert_pic">插入物品图片</string>
    <string name="release_insert_pic_click">插入图片</string>
    <string name="release_menu_camera">从拍照选取</string>
    <string name="release_menu_albums">从相册选取</string>
    <string name="release_please_insert_pic">请插入物品图片</string>
    <string name="release_step_two">发布宝贝第二步:</string>
    <string name="release_add_description">加入物品描述</string>
    <string name="release_property">宝贝属性</string>
    <string name="release_please_choose_properties">请选择宝贝属性</string>
    <string name="release_goods_title_hint">物品标题</string>
    <string name="release_please_fill_title">请填写标题</string>
    <string name="release_goods_description_hint">请输入物品描述(最少五个字)</string>
    <string name="release_please_fill_description">请填写物品描述(最少五个字)</string>
    <string name="release_description_new">全新</string>
    <string name="release_description_second">二手</string>
    <string name="release_description_change">转手</string>
    <string name="release_description_shopping">代购</string>
    <string name="release_step_three">发布宝贝第三步</string>
    <string name="release_add_price">设置宝贝价格</string>
    <string name="release_input_edittext">请输入</string>
    <string name="release_old_price">原价</string>
    <string name="release_now_price">出售价</string>
    <string name="release_trading_places">交易地点</string>
    <string name="release_the_contact">联系方式</string>
    <string name="release_phone_contact">手机号码或QQ号</string>
    <string name="release_final_release">发布闲置</string>
    <string name="release_deal_type">选择发布物品分类</string>
    <string name="release_already_deal_type">你已选择物品分类 &#8212; </string>
    <string name="release_error_old_price">请输入原价</string>
    <string name="release_error_now_price">请输入售价</string>
    <string name="release_error_trading">请输入交易地点</string>
    <string name="release_error_contact">请输入正确联系方式</string>
    <string name="release_error_deal_type">请选择类型</string>
    <string name="login_title">登录</string>
    <string name="login_username">用户名</string>
    <string name="login_password">密码</string>
    <string name="login">登录</string>
    <string name="register_login">直接登入</string>
    <string name="register_new">注册新用户</string>
    <string name="register_title">注册</string>
    <string name="detail_return">返回</string>
    <string name="detail_share">分享</string>
    <string name="detail_buy_now">立即购买</string>
    <string name="detail_title">详细页</string>
    <string name="detail_sell_price">出售价</string>
    <string name="detail_old_price">原价</string>
    <string name="detail_browser_times">浏览次数</string>
    <string name="detail_deal_place">交易地点</string>
    <string name="detail_deal_info">交易详情</string>
    <string name="detail_message">留言</string>
    <string name="detail_please_input">请输入</string>
</resources>