<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/release_step_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/release_textline_margintop"
        android:text="@string/release_step_three"
        android:textSize="@dimen/release_textsize" />

    <TextView
        android:id="@+id/release_add_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/release_step_three"
        android:layout_centerHorizontal="true"
        android:text="@string/release_add_price"
        android:textSize="@dimen/release_textsize" />

    <Button
        android:id="@+id/release_final_release"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/release_textline_margintop"
        android:layout_marginLeft="@dimen/release_textline_marginleft"
        android:layout_marginRight="@dimen/release_textline_marginleft"
        android:layout_marginTop="@dimen/release_textline_margintop"
        android:background="@drawable/next_step_button"
        android:text="@string/release_final_release"
        android:textColor="@color/white"
        android:textSize="@dimen/release_textsize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/release_final_release"
        android:layout_below="@id/release_add_price"
        android:orientation="vertical"
        android:paddingLeft="@dimen/release_textline_marginleft"
        android:paddingRight="@dimen/release_textline_marginleft" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/release_textline_margintop"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="right"
                android:text="@string/release_old_price"
                android:textSize="@dimen/release_textsize" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/release_input_text_margin_left"
                android:layout_weight="6"
                android:background="@drawable/edit_background"
                android:hint="@string/release_input_edittext"
                android:inputType="number"
                android:singleLine="true"
                android:textSize="@dimen/release_textsize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/release_textline_margintop"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="right"
                android:text="@string/release_now_price"
                android:textSize="@dimen/release_textsize" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/release_input_text_margin_left"
                android:layout_weight="6"
                android:background="@drawable/edit_background"
                android:hint="@string/release_input_edittext"
                android:inputType="number"
                android:singleLine="true"
                android:textSize="@dimen/release_textsize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/release_textline_margintop"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="right"
                android:text="@string/release_trading_places"
                android:textSize="@dimen/release_textsize" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/release_input_text_margin_left"
                android:layout_weight="6"
                android:background="@drawable/edit_background"
                android:hint="@string/release_input_edittext"
                android:inputType="text"
                android:singleLine="true"
                android:textSize="@dimen/release_textsize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/release_textline_margintop"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="right"
                android:text="@string/release_the_contact"
                android:textSize="@dimen/release_textsize" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/release_input_text_margin_left"
                android:layout_weight="6"
                android:background="@drawable/edit_background"
                android:hint="@string/release_input_edittext"
                android:inputType="text"
                android:singleLine="true"
                android:textSize="@dimen/release_textsize" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>