<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/center_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/center_title"
            android:textSize="@dimen/title_size" />

        <ImageView
            android:id="@+id/center_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/center_settings_right"
            android:contentDescription="@drawable/settings"
            android:src="@drawable/settings" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/classify_line_height"
        android:background="@color/light_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/center_user_photo"
            android:layout_width="@dimen/center_settings_user_width"
            android:layout_height="@dimen/center_settings_user_width"
            android:contentDescription="@drawable/user"
            android:scaleType="fitXY"
            android:src="@drawable/user" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="@dimen/center_settings_right" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/center_user_name" />

                <TextView
                    android:id="@+id/center_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/center_credit" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_gray"
        android:orientation="horizontal"
        android:paddingTop="@dimen/center_settings_margin" >

        <TextView
            android:id="@+id/center_sell"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/center_settings_margin"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:paddingTop="@dimen/center_settings_padding_top"
            android:singleLine="true"
            android:text="@string/center_sell"
            android:textSize="@dimen/center_settings_navigation" />

        <TextView
            android:id="@+id/center_selled"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/center_settings_margin"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:paddingTop="@dimen/center_settings_padding_top"
            android:singleLine="true"
            android:text="@string/center_selled"
            android:textSize="@dimen/center_settings_navigation" />

        <TextView
            android:id="@+id/center_buy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/center_settings_margin"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:paddingTop="@dimen/center_settings_padding_top"
            android:singleLine="true"
            android:text="@string/center_buy"
            android:textSize="@dimen/center_settings_navigation" />

        <TextView
            android:id="@+id/center_favorites"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/center_settings_margin"
            android:layout_marginRight="@dimen/center_settings_margin"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:paddingTop="@dimen/center_settings_padding_top"
            android:singleLine="true"
            android:text="@string/center_favorites"
            android:textSize="@dimen/center_settings_navigation" />
    </LinearLayout>

    <ListView
        android:id="@+id/center_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:listSelector="@drawable/item_list_selector" >
    </ListView>

</LinearLayout>